[gd_scene load_steps=2 format=3 uid="uid://diw0imd6aphmu"]

[ext_resource type="Script" path="res://scenes/ui/cheat_ui.gd" id="1_iagix"]

[node name="CheatUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_iagix")

[node name="WinButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 669.0
offset_right = 50.0
offset_bottom = 700.0
grow_vertical = 0
text = "Win"

[node name="CardsInStock" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 635.0
offset_right = 62.0
offset_bottom = 661.0
grow_vertical = 0
text = "aaaaa"

[connection signal="pressed" from="WinButton" to="." method="_on_win_button_pressed"]
